samples/_failures_safe/1761639438_693853_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4692031b.c: In function ‘main’:
./samples/SAFE/__tmp_4692031b.c:149: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_4692031b.c:148:5: error: expected declaration or statement at end of input
  148 |     if
      |     ^~
